@@ -1423,7 +1423,7 @@ for (int j=1; j<i; ++j) {
   Sphere_point p1 = point(source(e)), 
                p2 = point(target(e)), 
                p3 = point(target(next(e)));
-  if ( SG.orientation(p1,p2,p3) > 0 ) { // leftturn => outer face cycle
+  if ( SG.orientation(p1,p2,p3) > 0 ) { // left_turn => outer face cycle
     Face_handle f = new_face();
     link_as_face_cycle(e,f);
     TRACEN("  creating new face object "<<&*f<<" bd "<<&*e);
